First try to solve the bug that overflows the screen on the format modal

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -81,7 +81,7 @@
 
 html,
 body {
-  height: 100svh;
+  height: 100%;
   max-width: 100vw;
   overflow-x: hidden;
 }
